Make function to update display started building javascript functions to update the calc display each click of a number button pushes the number clicked onto an array and runs a function that updates the display with the string value of the array also added favicon and started a README next i must create a function that clears the array and set an event listener for the clear button with that function. Later on start working with operators to make calc work also figure how to stop the display from either displaying too large of a number or stop it from overflowing/expanding when a number gets too large

--- a/style.css
+++ b/style.css
@@ -45,9 +45,13 @@ body {
 }
 
 .display {
+  display: flex;
+  justify-content: end;
+  align-content: center;
   height: 85px;
   width: 100%;
   background-color: rgb(199, 199, 199, 0.4);
+  font-size: 70px;
 }
 
 .rows {
